[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/NixStory/Dialog.gd" type="Script" id=1]
[ext_resource path="res://addons/NixStory/nextMark.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/NixStory/TextPrinter.gd" type="Script" id=4]

[node name="Dialog" type="CanvasLayer"]
layer = 3
script = ExtResource( 1 )

[node name="Frame" type="Panel" parent="."]
visible = false
anchor_left = 0.0835937
anchor_top = 0.669444
anchor_right = 0.93125
anchor_bottom = 0.945833
__meta__ = {
"_edit_use_anchors_": true
}

[node name="portrait" type="TextureRect" parent="Frame"]
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 15.0
margin_right = 175.0
margin_bottom = -14.0
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speaker" type="Label" parent="Frame"]
anchor_right = 1.0
margin_left = 190.0
margin_top = 10.0
margin_bottom = 35.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "???"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="MarginContainer" parent="Frame"]
anchor_left = 0.0274621
anchor_top = 0.308901
anchor_right = 0.980114
anchor_bottom = 0.895288
margin_left = 162.0
margin_top = -7.62939e-06
margin_bottom = -1.52588e-05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextPrinter" type="RichTextLabel" parent="Frame/Content"]
margin_right = 871.0
margin_bottom = 116.0
bbcode_enabled = true
script = ExtResource( 4 )

[node name="next" parent="Frame" instance=ExtResource( 2 )]
[connection signal="finish" from="Frame/Content/TextPrinter" to="." method="_on_TextPrinter_finish"]
[connection signal="wait" from="Frame/Content/TextPrinter" to="." method="_on_TextPrinter_wait"]
